--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     </button>
             
         <script>
-            window.dataMemoryHeartLoveLoom = {"template":"birthday-v2","data":{"title":"love ","type_music":"zing","music_id":"Z7UZ7089","backgroundMusic":"","messages":["Thu Thủy","L-O-V-E", ],"images":["./1.jpg","./2.jpg"],"heartColor":"#FF69B4"}};
+            window.dataMemoryHeartLoveLoom = {"template":"birthday-v2","data":{"title":"love ","type_music":"zing","music_id":"Z7UZ7089","backgroundMusic":"","messages":["Ngọc Hân","L-O-V-E","I LOVE YOU" ],"images":["./1.jpg"],"heartColor":"#FF69B4"}};
         </script>
       <script type="module" src="./main.js"></script>
     <script>
@@ -619,6 +619,7 @@
     </script>
     
 </body>
+
 
 
 </html>
